Make syntax highlight scrolling instead of wrapping. Fixes #16

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,6 +1,8 @@
 @import 'all_bck';
 @import '_mq';
 @import 'katex';
+@import 'rogue.css';
+@import './rouge_custom.css.scss';
 @import './menu.css.scss';
 
 body {
@@ -62,22 +64,6 @@ div.footnotes {
     font-weight: bold;
 }
 
-div.highlight {
-    margin: 10px;
-}
-code>table {
-    th,td {
-        padding-left: 10px;
-        padding-right: 10px;
-        border-left: 1px solid #000;
-    }
-}
-pre span {
-    word-wrap: normal;
-    white-space: pre;
-    overflow-x: auto;
-}
-
 div.indent {
     padding-left: 1em;
 }
@@ -90,21 +76,21 @@ div.indent {
     }
 }
 
-.social_button_box {
-    position: absolute;
-    top: 11px;
-    right: 1em;
-    @include mq($from: tablet) {
-        top: 3.5em;
-        right: 2em;
-    }
-    .social_button {
-        vertical-align: middle;
-        padding: 2px;
-        .hatena-star-add-button {
-            transform: scale(1.2, 1.2) translate(0, -4px);
-            background-color: #FAFAFA;
-        }
-    }
-}
+// .social_button_box {
+//     position: absolute;
+//     top: 11px;
+//     right: 1em;
+//     @include mq($from: tablet) {
+//         top: 3.5em;
+//         right: 2em;
+//     }
+//     .social_button {
+//         vertical-align: middle;
+//         padding: 2px;
+//         .hatena-star-add-button {
+//             transform: scale(1.2, 1.2) translate(0, -4px);
+//             background-color: #FAFAFA;
+//         }
+//     }
+// }
 
